// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Client Editor when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-81 MuiTypography-display3-83 MuiTypography-gutterBottom-98"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-120 MuiButton-root-105 MuiButton-raised-110 MuiButton-raisedPrimary-112 ClientEditor-button-80"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-106"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-122"
        />
      </button>
      <button
        className="MuiButtonBase-root-120 MuiButton-root-105 MuiButton-raised-110 ClientEditor-button-80"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-106"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-122"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-130 MuiFormControl-marginNormal-131 EditableTextField-textField-129"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-140 MuiInputLabel-root-134 MuiInputLabel-formControl-135 MuiInputLabel-animated-138 MuiInputLabel-shrink-137"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-144 MuiInput-formControl-145 MuiInput-inkbar-146 MuiInput-underline-150"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-153"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Editor when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-160 MuiTypography-display3-162 MuiTypography-gutterBottom-177"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-199 MuiButtonBase-disabled-200 MuiButton-root-184 MuiButton-raised-189 MuiButton-raisedPrimary-191 MuiButton-disabled-193 ClientEditor-button-159"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-185"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-199 MuiButtonBase-disabled-200 MuiButton-root-184 MuiButton-raised-189 MuiButton-disabled-193 ClientEditor-button-159"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-185"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-202 MuiFormControl-marginNormal-203 EditableTextField-textField-201"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-212 MuiInputLabel-root-206 MuiInputLabel-formControl-207 MuiInputLabel-animated-210 MuiInputLabel-shrink-209"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-216 MuiInput-disabled-221 MuiInput-formControl-217 MuiInput-inkbar-218 MuiInput-underline-222"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-225 MuiInput-inputDisabled-227"
        defaultValue={undefined}
        disabled={true}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Editor with a client 1`] = `
<form>
  <h1
    className="MuiTypography-root-2 MuiTypography-display3-4 MuiTypography-gutterBottom-19"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31 ClientEditor-button-1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-27"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-43"
        />
      </button>
      <button
        className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31 MuiButton-raisedSecondary-34 ClientEditor-button-1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-27"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-43"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-51 MuiFormControl-marginNormal-52 EditableTextField-textField-50"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-61 MuiInputLabel-root-55 MuiInputLabel-formControl-56 MuiInputLabel-animated-59 MuiInputLabel-shrink-58"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-65 MuiInput-formControl-66 MuiInput-inkbar-67 MuiInput-underline-71"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-74"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Clients List with adding a new client 1`] = `
<div>
  <h2
    className="MuiTypography-root-413 MuiTypography-title-419 MuiTypography-gutterBottom-430"
  >
    Client List
  </h2>
  <table
    className="MuiTable-root-437 ClientsList-root-409"
  >
    <thead>
      <tr
        className="MuiTableRow-root-438 MuiTableRow-typeHead-439"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-paddingDefault-448 MuiTableCell-typeHead-445"
          scope="col"
        >
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MuiTableRow-root-438"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-paddingDefault-448 MuiTableCell-typeBody-446"
          scope={undefined}
        >
          <div
            className="MuiInput-root-451 MuiInput-disabled-456 MuiInput-inkbar-453 MuiInput-underline-457"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              aria-invalid={undefined}
              aria-required={undefined}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-460 MuiInput-inputDisabled-462"
              defaultValue={undefined}
              disabled={true}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder="New Client Name"
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value="Some New Client"
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-paddingDefault-448 MuiTableCell-typeBody-446 ClientsList-actionCell-411"
          scope={undefined}
        >
          <div
            className="ClientsList-wrapper-410"
          >
            <button
              className="MuiButtonBase-root-481 MuiButtonBase-disabled-482 MuiButton-root-466 MuiButton-flatPrimary-468 MuiButton-disabled-475"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                className="MuiButton-label-467"
              >
                Add
              </span>
            </button>
            <div
              className="MuiCircularProgress-root-483 MuiCircularProgress-colorPrimary-484 ClientsList-buttonProgress-412"
              role="progressbar"
              style={
                Object {
                  "height": 25,
                  "width": 25,
                }
              }
            >
              <svg
                className="MuiCircularProgress-svg-486 MuiCircularProgress-svgIndeterminate-487"
                viewBox="0 0 50 50"
              >
                <circle
                  className="MuiCircularProgress-circle-488 MuiCircularProgress-circleIndeterminate-489"
                  cx={25}
                  cy={25}
                  fill="none"
                  r={20}
                  strokeWidth={3.6}
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-438"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-443 MuiTableCell-paddingDefault-448 MuiTableCell-typeBody-446"
          scope={undefined}
        >
          <a>
            Some Client
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Clients List with loading all clients 1`] = `
<div>
  <h2
    className="MuiTypography-root-316 MuiTypography-title-322 MuiTypography-gutterBottom-333"
  >
    Client List
  </h2>
  <table
    className="MuiTable-root-340 ClientsList-root-312"
  >
    <thead>
      <tr
        className="MuiTableRow-root-341 MuiTableRow-typeHead-342"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-346 MuiTableCell-paddingDefault-351 MuiTableCell-typeHead-348"
          scope="col"
        >
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MuiTableRow-root-341"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-346 MuiTableCell-paddingDefault-351 MuiTableCell-typeBody-349"
          scope={undefined}
        >
          <div
            className="MuiInput-root-354 MuiInput-inkbar-356 MuiInput-underline-360"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              aria-invalid={undefined}
              aria-required={undefined}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-363"
              defaultValue={undefined}
              disabled={undefined}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder="New Client Name"
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-346 MuiTableCell-paddingDefault-351 MuiTableCell-typeBody-349 ClientsList-actionCell-314"
          scope={undefined}
        >
          <div
            className="ClientsList-wrapper-313"
          >
            <button
              className="MuiButtonBase-root-384 MuiButton-root-369 MuiButton-flatPrimary-371"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-370"
              >
                Add
              </span>
              <span
                className="MuiTouchRipple-root-386"
              />
            </button>
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-341"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-346 MuiTableCell-paddingDefault-351 MuiTableCell-typeBody-349"
          colSpan={2}
          scope={undefined}
        >
          <div
            className="MuiLinearProgress-root-393 MuiLinearProgress-primaryColor-394"
            mode="query"
            role="progressbar"
          >
            <div
              className="MuiLinearProgress-bar-400 MuiLinearProgress-primaryColorBar-395 MuiLinearProgress-indeterminateBar1-405"
              style={Object {}}
            />
            <div
              className="MuiLinearProgress-bar-400 MuiLinearProgress-primaryColorBar-395 MuiLinearProgress-indeterminateBar2-406"
              style={Object {}}
            />
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-341"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-346 MuiTableCell-paddingDefault-351 MuiTableCell-typeBody-349"
          scope={undefined}
        >
          <a>
            Some Client
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Clients List with no clients 1`] = `
<div>
  <h2
    className="MuiTypography-root-235 MuiTypography-title-241 MuiTypography-gutterBottom-252"
  >
    Client List
  </h2>
  <table
    className="MuiTable-root-259 ClientsList-root-231"
  >
    <thead>
      <tr
        className="MuiTableRow-root-260 MuiTableRow-typeHead-261"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-265 MuiTableCell-paddingDefault-270 MuiTableCell-typeHead-267"
          scope="col"
        >
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MuiTableRow-root-260"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-265 MuiTableCell-paddingDefault-270 MuiTableCell-typeBody-268"
          scope={undefined}
        >
          <div
            className="MuiInput-root-273 MuiInput-inkbar-275 MuiInput-underline-279"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              aria-invalid={undefined}
              aria-required={undefined}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-282"
              defaultValue={undefined}
              disabled={undefined}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder="New Client Name"
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value=""
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-265 MuiTableCell-paddingDefault-270 MuiTableCell-typeBody-268 ClientsList-actionCell-233"
          scope={undefined}
        >
          <div
            className="ClientsList-wrapper-232"
          >
            <button
              className="MuiButtonBase-root-303 MuiButton-root-288 MuiButton-flatPrimary-290"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label-289"
              >
                Add
              </span>
              <span
                className="MuiTouchRipple-root-305"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Product Editor when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-570 MuiTypography-display3-572 MuiTypography-gutterBottom-587"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-609 MuiButton-root-594 MuiButton-raised-599 MuiButton-raisedPrimary-601 ProductEditor-button-569"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-595"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-611"
        />
      </button>
      <button
        className="MuiButtonBase-root-609 MuiButton-root-594 MuiButton-raised-599 ProductEditor-button-569"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-595"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-611"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-619 MuiFormControl-marginNormal-620 EditableTextField-textField-618"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-629 MuiInputLabel-root-623 MuiInputLabel-formControl-624 MuiInputLabel-animated-627 MuiInputLabel-shrink-626"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-633 MuiInput-formControl-634 MuiInput-inkbar-635 MuiInput-underline-639"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-642"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Product Editor when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-649 MuiTypography-display3-651 MuiTypography-gutterBottom-666"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-688 MuiButtonBase-disabled-689 MuiButton-root-673 MuiButton-raised-678 MuiButton-raisedPrimary-680 MuiButton-disabled-682 ProductEditor-button-648"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-674"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-688 MuiButtonBase-disabled-689 MuiButton-root-673 MuiButton-raised-678 MuiButton-disabled-682 ProductEditor-button-648"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-674"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-691 MuiFormControl-marginNormal-692 EditableTextField-textField-690"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-701 MuiInputLabel-root-695 MuiInputLabel-formControl-696 MuiInputLabel-animated-699 MuiInputLabel-shrink-698"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-705 MuiInput-disabled-710 MuiInput-formControl-706 MuiInput-inkbar-707 MuiInput-underline-711"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-714 MuiInput-inputDisabled-716"
        defaultValue={undefined}
        disabled={true}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Product Editor with a product 1`] = `
<form>
  <h1
    className="MuiTypography-root-491 MuiTypography-display3-493 MuiTypography-gutterBottom-508"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-530 MuiButton-root-515 MuiButton-raised-520 ProductEditor-button-490"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-516"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-532"
        />
      </button>
      <button
        className="MuiButtonBase-root-530 MuiButton-root-515 MuiButton-raised-520 MuiButton-raisedSecondary-523 ProductEditor-button-490"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-516"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-532"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-540 MuiFormControl-marginNormal-541 EditableTextField-textField-539"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-550 MuiInputLabel-root-544 MuiInputLabel-formControl-545 MuiInputLabel-animated-548 MuiInputLabel-shrink-547"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-554 MuiInput-formControl-555 MuiInput-inkbar-556 MuiInput-underline-560"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-563"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;
